--- a/Ciliora-Secunda/gnome-shell/scss/main/_calendar-popup.scss
+++ b/Ciliora-Secunda/gnome-shell/scss/main/_calendar-popup.scss
@@ -442,7 +442,7 @@
         }
     }
 
-    StScrollBar {
+    StScrollView StScrollBar {
         padding: 8px 0 12px 0;
     }
 }
